# nba-salary-predictor

./: LICENSE  README.md  skills-lock.json
.agents/skills/conventional-commit/: SKILL.md
api/: .gitignore  pyproject.toml
api/app/: config.py  main.py  schemas.py
api/app/services/: __init__.py  predictor.py
api/artifacts/: preprocessor.pkl
research/: notebook.ipynb  pyproject.toml
research/artifacts/: model.keras
research/dataset/: NBA Player Stats and Salaries (2010-2025).csv
web/: .gitignore  .prettierrc  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: footer.tsx  header.tsx  season-picker.tsx
web/src/data/: seasons.ts
web/src/types/: season.ts
web/src/utils/: format.ts
