[project]
name = "api"
version = "0.1.0"
description = "API para predição de salários da NBA com Deep Learning."
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi[standard]>=0.139.2",
  "numpy>=2.5.1",
  "pandas>=3.0.3",
  "scikit-learn>=1.9.0",
  "tensorflow-cpu>=2.21.0",
]

[tool.fastapi]
entrypoint = "app.main:app"
