[project]
name = "api"
version = "0.1.0"
description = "API para predição de salários da NBA com Deep Learning."
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi[standard]>=0.139.2",
  "numpy>=2.5.1",
  "pandas>=3.0.3",
  "scikit-learn>=1.9.0",
  "tensorflow-cpu>=2.21.0",
]

[dependency-groups]
dev = ["ruff>=0.15.22"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
