[project]
name = "research"
version = "0.1.0"
description = "Predição de salários da NBA utilizando Aprendizado Profudo a partir de métricas de desempenho entre 2017 e 2025."
requires-python = ">=3.9,<3.14"
dependencies = [
  "ipykernel>=6.31.0",
  "matplotlib>=3.9.4",
  "notebook>=7.5.7",
  "numpy>=2.0.2",
  "pandas>=2.3.3",
  "scikit-learn>=1.6.1",
  "tensorflow-cpu>=2.20.0",
]
